Added python line-profiler support

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "external/llvm-ompt"]
 	path = external/llvm-ompt
 	url = https://github.com/NERSC/LLVM-openmp.git
+[submodule "external/line-profiler"]
+	path = external/line-profiler
+	url = https://github.com/jrmadsen/line_profiler.git
