--- a/source/tools/timem/CMakeLists.txt
+++ b/source/tools/timem/CMakeLists.txt
@@ -1,4 +1,9 @@
 
+# no windows support
+if(WIN32)
+    return()
+endif()
+
 #----------------------------------------------------------------------------------------#
 # Build and install timem tool
 #
