Disable ERT for CI

--- a/examples/ex-ert/CMakeLists.txt
+++ b/examples/ex-ert/CMakeLists.txt
@@ -10,6 +10,9 @@ include(CheckLanguage)
 set(_USE_CUDA ON)
 # this is for internal use
 if("${CMAKE_PROJECT_NAME}" STREQUAL "timemory")
+    if(DEFINED BUILD_ERT AND NOT BUILD_ERT)
+        return()
+    endif()
     get_property(LANGUAGES GLOBAL PROPERTY ENABLED_LANGUAGES)
     if(NOT "CUDA" IN_LIST LANGUAGES OR NOT CMAKE_CUDA_COMPILER OR NOT TIMEMORY_USE_CUDA)
         set(_USE_CUDA OFF)
