--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -89,7 +89,7 @@ build_script:
     -DBUILD_STATIC_LIBS=ON
     -DBUILD_SHARED_LIBS=ON
     -DCMAKE_BUILD_TYPE="%CONFIG%"
-    -DCMAKE_CXX_STANDARD="%CPP"
+    -DCMAKE_CXX_STANDARD="%CPP%"
     -DCMAKE_INSTALL_PREFIX=..\install-timemory
     -DPYTHON_EXECUTABLE="%PYTHON_EXE%"
     -DTIMEMORY_USE_MPI=OFF
