--- a/.travis.yml
+++ b/.travis.yml
@@ -185,7 +185,7 @@ matrix:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which gcc-8) && CXX=$(which g++-8) && BUILD_ARGS='--build-libs shared --mpi --papi --mpip --python --kokkos --gotcha --stats --cxx-standard=17'"
+        - MATRIX_EVAL="CC=$(which gcc-8) && CXX=$(which g++-8) && BUILD_ARGS='--build-libs shared --mpi --papi --python --gotcha --stats --cxx-standard=17'"
     # Clang 5.0
     - os: linux
       dist: xenial
