Fixes for scikit-build installation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,9 @@ math(EXPR TIMEMORY_VERSION_CODE
 
 if(SKBUILD)
     set(CMAKE_INSTALL_LIBDIR lib)
+    set(TIMEMORY_USE_PYTHON ON CACHE BOOL "" FORCE)
+    set(TIMEMORY_BUILD_PYTHON ON CACHE BOOL "" FORCE)
+    set(BUILD_SHARED_LIBS ON CACHE BOOL "" FORCE)
 endif()
 
 #----------------------------------------------------------------------------------------#
