--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -57,21 +57,30 @@ cpu profiler, heap checker, and heap profiler lie dormant until activated.
 
 Other relevant gperftools environment variables:
 
-    HEAPPROFILE=<pre>       -- turns on heap profiling and dumps data using this prefix
+    HEAPPROFILE=<pre>       -- turns on heap profiling and dumps data
+                               using this prefix
     HEAPCHECK=<type>        -- turns on heap checking with strictness 'type'
-    CPUPROFILE=<file>       -- turns on cpu profiling and dumps data to this file.
-    PROFILESELECTED=1       -- if set, cpu-profiler will only profile regions of code
-                               surrounded with ProfilerEnable()/ProfilerDisable().
-    CPUPROFILE_FREQUENCY=x  -- how many interrupts/second the cpu-profiler samples.
+    CPUPROFILE=<file>       -- turns on cpu profiling and dumps data to this
+                               file.
+    PROFILESELECTED=1       -- if set, cpu-profiler will only profile regions
+                               of code surrounded with
+                               ProfilerEnable()/ProfilerDisable().
+    CPUPROFILE_FREQUENCY=x  -- how many interrupts/second the cpu-profiler
+                               samples.
     PERFTOOLS_VERBOSE=<lvl> -- the higher level, the more messages malloc emits
     MALLOCSTATS=<level>     -- prints memory-use stats at program-exit
 
 See also: https://github.com/gperftools/gperftools
 
-If applications that use timemory + gperftools experience errors during exit w.r.t.
-corrupted sizes, set:
+If applications that use timemory + gperftools experience errors during exit
+w.r.t. corrupted sizes, set:
 
-    export LD_PRELOAD=/path/to/libmalloc.so
+    (linux)
+    export LD_PRELOAD=/path/to/libtcmalloc.so
+
+    (macOS)
+    export DYLD_INSERT_LIBRARIES=/path/to/libtcmalloc.dylib
+    export DYLD_FORCE_FLAT_NAMESPACE=1
 
 before BEFORE running Python
 '''
@@ -96,9 +105,62 @@ if os.environ.get("TIMEMORY_CXX_PLOT_MODE", None) is not None:
                'FILE',
                ]
 else:
-
     try:
-        from . import libpytimemory
+        try:
+            from . import libpytimemory
+        except Exception as e:
+            import ctypes
+            import glob
+
+            relative_lib_path = '@LIB_RELPATH@'
+
+            def valid_relpath(p):
+                global this_path
+                cp = os.path.join(this_path, relative_lib_path)
+                return os.path.exists(cp)
+
+            for i in range(5):
+                valid = valid_relpath(relative_lib_path)
+                if valid:
+                    break
+                else:
+                    relative_lib_path = os.path.join('..', relative_lib_path)
+
+            ext = None
+            if platform.system().lower().startswith('darwin'):
+                ext = 'dylib'
+            elif platform.system().lower().startswith('linux'):
+                ext = 'so'
+            elif platform.system().lower().startswith('win'):
+                ext = 'dll'
+
+            def load(name):
+                p = os.path.realpath(os.path.join(
+                    this_path, relative_lib_path, name))
+                if not os.path.exists(p):
+                    p = os.path.realpath(
+                        os.path.join(this_path, relative_lib_path,
+                                     'timemory', name))
+                ctypes.cdll.LoadLibrary(p)
+
+            extrapath = os.path.realpath(os.path.join(
+                this_path, relative_lib_path, 'timemory'))
+            extra = glob.glob('{}/*timemory*.{}'.format(extrapath, ext))
+            loaded = []
+            ntries = 0
+            while len(loaded) < len(extra) and ntries < len(extra):
+                ntries = ntries + 1
+                for entry in extra:
+                    if entry in loaded:
+                        continue
+                    try:
+                        load(os.path.basename(entry))
+                        loaded.append(entry)
+                    except Exception as e:
+                        pass
+            load('libtimemory.{}'.format(ext))
+            from . import libpytimemory
+
         from . import plotting
         from . import roofline
         from . import mpi_support
