Initial ScoreP implementation

--- a/source/timemory/components/CMakeLists.txt
+++ b/source/timemory/components/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory(ompt)
 add_subdirectory(rusage)
 add_subdirectory(papi)
 add_subdirectory(roofline)
+add_subdirectory(scorep)
 add_subdirectory(tau_marker)
 add_subdirectory(timing)
 add_subdirectory(trip_count)
