Docs + report traits + type_list_element + disable memfun + get_reference memfun
- tweaked appveyor and travis to support quick builds
- added documentation for type-traits, polices, and utilities
- added more doxygen comments
- migrated read_bytes and written_bytes to io folder
- added report_{self,metric_name,units,statistics} type-traits
- minor revisions to operation::generic_deleter
- added type_list_element
- added disable() memfun to {auto,component}_{bundle,list}
- added get_reference() memfun to {auto,component}_{bundle,list}

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,9 @@ endif()
 # override any cache settings
 if(TIMEMORY_BUILD_TESTING)
     set(TIMEMORY_BUILD_GOOGLE_TEST ON)
-    set(TIMEMORY_BUILD_EXAMPLES ON)
+    if(NOT TIMEMORY_BUILD_MINIMAL_TESTING)
+        set(TIMEMORY_BUILD_EXAMPLES ON)
+    endif()
 endif()
 #
 if("${CMAKE_BUILD_TYPE}" STREQUAL "")
