--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,21 +18,27 @@ environment:
     - PYTHON: 36
       CPP: 14
       CONFIG: MinSizeRel
+      EXAMPLES: "ON"
     - PYTHON: 37
       CPP: 17
       CONFIG: RelWithDebInfo
+      EXAMPLES: "OFF"
     - CONDA: 36
       CPP: 14
       CONFIG: MinSizeRel
+      EXAMPLES: "OFF"
     - CONDA: 37
       CPP: 17
       CONFIG: Release
+      EXAMPLES: "OFF"
     - PYTHON: 38
       CPP: 17
       CONFIG: MinSizeRel
+      EXAMPLES: "ON"
     - CONDA: 38
       CPP: 14
       CONFIG: MinSizeRel
+      EXAMPLES: "ON"
 
 install:
   # Configure environment
@@ -96,19 +102,22 @@ build_script:
     -DTIMEMORY_USE_PYTHON=ON
     -DTIMEMORY_BUILD_C=ON
     -DTIMEMORY_BUILD_PYTHON=ON
-    -DTIMEMORY_BUILD_EXAMPLES=ON
+    -DTIMEMORY_BUILD_EXAMPLES="%EXAMPLES%"
     -DTIMEMORY_BUILD_GOOGLE_TEST=OFF
     -DTIMEMORY_BUILD_TOOLS=ON
   - set MSBuildLogger="C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
   - cmake --build . --config "%CONFIG%" --target ALL_BUILD -- /m /v:m /logger:%MSBuildLogger%
   - cmake --build . --config "%CONFIG%" --target INSTALL -- /m /v:m /logger:%MSBuildLogger%
   - ls
-  - .\outputs\runtime\%CONFIG%\ex_optional_off.exe
-  - .\outputs\runtime\%CONFIG%\ex_cxx_basic.exe & exit 0
-  - .\outputs\runtime\%CONFIG%\ex_optional_on.exe & exit 0
-  - .\outputs\runtime\%CONFIG%\ex_cxx_overhead.exe & exit 0
-  - .\outputs\runtime\%CONFIG%\ex_cxx_tuple.exe & exit 0
-  - .\outputs\runtime\%CONFIG%\ex_c_minimal.exe & exit 0
-  - .\outputs\runtime\%CONFIG%\ex_c_minimal_library.exe & exit 0
-  - .\outputs\runtime\%CONFIG%\ex_c_timing.exe & exit 0
+  - ps: |
+      if ($env:EXAMPLES -eq "ON") {
+        .\outputs\runtime\%CONFIG%\ex_optional_off.exe
+        .\outputs\runtime\%CONFIG%\ex_cxx_basic.exe & exit 0
+        .\outputs\runtime\%CONFIG%\ex_optional_on.exe & exit 0
+        .\outputs\runtime\%CONFIG%\ex_cxx_overhead.exe & exit 0
+        .\outputs\runtime\%CONFIG%\ex_cxx_tuple.exe & exit 0
+        .\outputs\runtime\%CONFIG%\ex_c_minimal.exe & exit 0
+        .\outputs\runtime\%CONFIG%\ex_c_minimal_library.exe & exit 0
+        .\outputs\runtime\%CONFIG%\ex_c_timing.exe & exit 0
+      }
   - cmake -P tests/test-python-install-import.cmake
