--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -112,12 +112,12 @@ build_script:
   - ps: |
       if ($env:EXAMPLES -eq "ON") {
         .\outputs\runtime\%CONFIG%\ex_optional_off.exe
-        .\outputs\runtime\%CONFIG%\ex_cxx_basic.exe & exit 0
-        .\outputs\runtime\%CONFIG%\ex_optional_on.exe & exit 0
-        .\outputs\runtime\%CONFIG%\ex_cxx_overhead.exe & exit 0
-        .\outputs\runtime\%CONFIG%\ex_cxx_tuple.exe & exit 0
-        .\outputs\runtime\%CONFIG%\ex_c_minimal.exe & exit 0
-        .\outputs\runtime\%CONFIG%\ex_c_minimal_library.exe & exit 0
-        .\outputs\runtime\%CONFIG%\ex_c_timing.exe & exit 0
+        .\outputs\runtime\%CONFIG%\ex_cxx_basic.exe
+        .\outputs\runtime\%CONFIG%\ex_optional_on.exe
+        .\outputs\runtime\%CONFIG%\ex_cxx_overhead.exe
+        .\outputs\runtime\%CONFIG%\ex_cxx_tuple.exe
+        .\outputs\runtime\%CONFIG%\ex_c_minimal.exe
+        .\outputs\runtime\%CONFIG%\ex_c_minimal_library.exe
+        .\outputs\runtime\%CONFIG%\ex_c_timing.exe
       }
   - cmake -P tests/test-python-install-import.cmake
