--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -111,13 +111,13 @@ build_script:
   - ls
   - ps: |
       if ($env:EXAMPLES -eq "ON") {
-        .\outputs\runtime\%CONFIG%\ex_optional_off.exe
-        .\outputs\runtime\%CONFIG%\ex_cxx_basic.exe
-        .\outputs\runtime\%CONFIG%\ex_optional_on.exe
-        .\outputs\runtime\%CONFIG%\ex_cxx_overhead.exe
-        .\outputs\runtime\%CONFIG%\ex_cxx_tuple.exe
-        .\outputs\runtime\%CONFIG%\ex_c_minimal.exe
-        .\outputs\runtime\%CONFIG%\ex_c_minimal_library.exe
-        .\outputs\runtime\%CONFIG%\ex_c_timing.exe
+        "./outputs/runtime/%CONFIG%/ex_optional_off.exe"
+        "./outputs/runtime/%CONFIG%/ex_cxx_basic.exe"
+        "./outputs/runtime/%CONFIG%/ex_optional_on.exe"
+        "./outputs/runtime/%CONFIG%/ex_cxx_overhead.exe"
+        "./outputs/runtime/%CONFIG%/ex_cxx_tuple.exe"
+        "./outputs/runtime/%CONFIG%/ex_c_minimal.exe"
+        "./outputs/runtime/%CONFIG%/ex_c_minimal_library.exe"
+        "./outputs/runtime/%CONFIG%/ex_c_timing.exe"
       }
   - cmake -P tests/test-python-install-import.cmake
